feat: análise de metadados, cardinalidade e tipagem não numérica.

--- a/002_modelagem_preditiva.ipynb
+++ b/002_modelagem_preditiva.ipynb
@@ -371,19 +371,462 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cf094da",
+   "id": "26bcdc78",
    "metadata": {},
    "source": [
-    "### 3.1. Separação dos dados em treino e teste"
+    "### 3.1. Exibição dos metadados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "04a72734",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Função para geração de um dataframe de metadados\n",
+    "\n",
+    "def generate_metadata(dataframe):\n",
+    "    '''\n",
+    "    Gera um DataFrame contendo metadados das colunas do DataFrame fornecido.\n",
+    "\n",
+    "    :param dataframe: DataFrame\n",
+    "        DataFrame para o qual os metadados serão gerados.\n",
+    "    :return: DataFrame\n",
+    "        DataFrame contendo os metadados.\n",
+    "    '''\n",
+    "    metadata = pd.DataFrame({\n",
+    "        'Variável': dataframe.columns,\n",
+    "        'Tipo': dataframe.dtypes,\n",
+    "        'Qtde de nulos': dataframe.isnull().sum(),\n",
+    "        '% de nulos': round((dataframe.isnull().sum() / len(dataframe)) * 100, 2),\n",
+    "        'Cardinalidade': dataframe.nunique(),\n",
+    "    }).sort_values(by='Qtde de nulos', ascending=False).reset_index(drop=True)\n",
+    "\n",
+    "    return metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "0d14e730",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Variável</th>\n",
+       "      <th>Tipo</th>\n",
+       "      <th>Qtde de nulos</th>\n",
+       "      <th>% de nulos</th>\n",
+       "      <th>Cardinalidade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Customer Name</td>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Customer e-mail</td>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Country</td>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Gender</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Age</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Annual Salary</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Credit Card Debt</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Net Worth</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Car Purchase Amount</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>debt_to_annual_salary</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>net_worth_to_annual_salary</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>debt_to_net_worth</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>disposable_income</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>liquidity_ratio</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>financial_leverage_index</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>age-to-wealth_ratio</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>age-to-income_ratio</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>purchasing_power_index_PPI</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>relative_debt_pressure_RDP</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>net_asset_efficiency</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>potential_purchase_capacity_PPC</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>age_adjusted_income</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>wealth_growth_rate</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>financial_maturity_index</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>email_tld</td>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>age_range</td>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>high_income_flag</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>high_debt_flag</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>high_net_worth_flag</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>high_ppi_flag</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>financial_status_category</td>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Variável     Tipo  Qtde de nulos  % de nulos  \\\n",
+       "0                     Customer Name   object              0         0.0   \n",
+       "1                   Customer e-mail   object              0         0.0   \n",
+       "2                           Country   object              0         0.0   \n",
+       "3                            Gender    int64              0         0.0   \n",
+       "4                               Age    int64              0         0.0   \n",
+       "5                     Annual Salary  float64              0         0.0   \n",
+       "6                  Credit Card Debt  float64              0         0.0   \n",
+       "7                         Net Worth  float64              0         0.0   \n",
+       "8               Car Purchase Amount  float64              0         0.0   \n",
+       "9             debt_to_annual_salary  float64              0         0.0   \n",
+       "10       net_worth_to_annual_salary  float64              0         0.0   \n",
+       "11                debt_to_net_worth  float64              0         0.0   \n",
+       "12                disposable_income  float64              0         0.0   \n",
+       "13                  liquidity_ratio  float64              0         0.0   \n",
+       "14         financial_leverage_index  float64              0         0.0   \n",
+       "15              age-to-wealth_ratio  float64              0         0.0   \n",
+       "16              age-to-income_ratio  float64              0         0.0   \n",
+       "17       purchasing_power_index_PPI  float64              0         0.0   \n",
+       "18       relative_debt_pressure_RDP  float64              0         0.0   \n",
+       "19             net_asset_efficiency  float64              0         0.0   \n",
+       "20  potential_purchase_capacity_PPC  float64              0         0.0   \n",
+       "21              age_adjusted_income  float64              0         0.0   \n",
+       "22               wealth_growth_rate  float64              0         0.0   \n",
+       "23         financial_maturity_index  float64              0         0.0   \n",
+       "24                        email_tld   object              0         0.0   \n",
+       "25                        age_range   object              0         0.0   \n",
+       "26                 high_income_flag    int64              0         0.0   \n",
+       "27                   high_debt_flag    int64              0         0.0   \n",
+       "28              high_net_worth_flag    int64              0         0.0   \n",
+       "29                    high_ppi_flag    int64              0         0.0   \n",
+       "30        financial_status_category   object              0         0.0   \n",
+       "\n",
+       "    Cardinalidade  \n",
+       "0             498  \n",
+       "1             500  \n",
+       "2               1  \n",
+       "3               2  \n",
+       "4              43  \n",
+       "5             500  \n",
+       "6             500  \n",
+       "7             500  \n",
+       "8             500  \n",
+       "9             500  \n",
+       "10            500  \n",
+       "11            500  \n",
+       "12            500  \n",
+       "13            500  \n",
+       "14            500  \n",
+       "15            500  \n",
+       "16            500  \n",
+       "17            500  \n",
+       "18            500  \n",
+       "19            500  \n",
+       "20            500  \n",
+       "21            500  \n",
+       "22            500  \n",
+       "23            500  \n",
+       "24              6  \n",
+       "25              6  \n",
+       "26              2  \n",
+       "27              2  \n",
+       "28              2  \n",
+       "29              2  \n",
+       "30              3  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_metadata(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be3eb692",
+   "metadata": {},
+   "source": [
+    "### 3.2. Análise de cardinalidade"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "debb31ba",
+   "id": "546046cf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Country']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Listando todas as variáveis com cardinalidade inferior a 2\n",
+    "\n",
+    "cols_constantes = [col for col in df.columns if df[col].nunique(dropna=False) < 2]\n",
+    "print(cols_constantes)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09e7ba9f",
+   "metadata": {},
+   "source": [
+    "### 3.3. Análise de variáveis não numéricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "c8c97fa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Customer Name', 'Customer e-mail', 'Country', 'email_tld', 'age_range', 'financial_status_category']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Listando todas as variáveis object e category\n",
+    "\n",
+    "cols_text = df.select_dtypes(include=[object, 'category']).columns.tolist()\n",
+    "print(cols_text)"
+   ]
   }
  ],
  "metadata": {
