--- a/002_modelagem_preditiva.ipynb
+++ b/002_modelagem_preditiva.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "id": "ac890d7d",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "fe23f833",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "id": "603fe2f4",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Quantidade de objetos removidos da memória: 1370\n"
+      "Quantidade de objetos removidos da memória: 7\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "id": "90283013",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "04a72734",
    "metadata": {},
    "outputs": [],
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "0d14e730",
    "metadata": {},
    "outputs": [
@@ -761,7 +761,7 @@
        "30              3  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "546046cf",
    "metadata": {},
    "outputs": [
@@ -795,8 +795,8 @@
    "source": [
     "# Listando todas as variáveis com cardinalidade inferior a 2\n",
     "\n",
-    "cols_constantes = [col for col in df.columns if df[col].nunique(dropna=False) < 2]\n",
-    "print(cols_constantes)\n"
+    "cols_low_cardinality = [col for col in df.columns if df[col].nunique(dropna=False) < 2]\n",
+    "print(cols_low_cardinality)\n"
    ]
   },
   {
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 50,
    "id": "c8c97fa1",
    "metadata": {},
    "outputs": [
@@ -826,6 +826,202 @@
     "\n",
     "cols_text = df.select_dtypes(include=[object, 'category']).columns.tolist()\n",
     "print(cols_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "6b8094ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer Name</th>\n",
+       "      <th>Customer e-mail</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>email_tld</th>\n",
+       "      <th>age_range</th>\n",
+       "      <th>financial_status_category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Martina Avila</td>\n",
+       "      <td>cubilia.Curae.Phasellus@quisaccumsanconvallis.edu</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>edu</td>\n",
+       "      <td>35 to 44</td>\n",
+       "      <td>Moderate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Harlan Barnes</td>\n",
+       "      <td>eu.dolor@diam.co.uk</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>uk</td>\n",
+       "      <td>35 to 44</td>\n",
+       "      <td>Moderate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Naomi Rodriquez</td>\n",
+       "      <td>vulputate.mauris.sagittis@ametconsectetueradipiscing.co.uk</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>uk</td>\n",
+       "      <td>35 to 44</td>\n",
+       "      <td>Moderate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jade Cunningham</td>\n",
+       "      <td>malesuada@dignissim.com</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>com</td>\n",
+       "      <td>55 to 64</td>\n",
+       "      <td>High Income - Low Debt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cedric Leach</td>\n",
+       "      <td>felis.ullamcorper.viverra@egetmollislectus.net</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>net</td>\n",
+       "      <td>55 to 64</td>\n",
+       "      <td>Moderate</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Customer Name  \\\n",
+       "0    Martina Avila   \n",
+       "1    Harlan Barnes   \n",
+       "2  Naomi Rodriquez   \n",
+       "3  Jade Cunningham   \n",
+       "4     Cedric Leach   \n",
+       "\n",
+       "                                              Customer e-mail Country  \\\n",
+       "0           cubilia.Curae.Phasellus@quisaccumsanconvallis.edu     USA   \n",
+       "1                                         eu.dolor@diam.co.uk     USA   \n",
+       "2  vulputate.mauris.sagittis@ametconsectetueradipiscing.co.uk     USA   \n",
+       "3                                     malesuada@dignissim.com     USA   \n",
+       "4              felis.ullamcorper.viverra@egetmollislectus.net     USA   \n",
+       "\n",
+       "  email_tld age_range financial_status_category  \n",
+       "0       edu  35 to 44                  Moderate  \n",
+       "1        uk  35 to 44                  Moderate  \n",
+       "2        uk  35 to 44                  Moderate  \n",
+       "3       com  55 to 64    High Income - Low Debt  \n",
+       "4       net  55 to 64                  Moderate  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[cols_text].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2498b77",
+   "metadata": {},
+   "source": [
+    "### 3.4. Selecionando variáveis não aplicáveis à modelagem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc91f5dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separando as variáveis não aplicáveis à modelagem\n",
+    "\n",
+    "vars_to_remove = ['Age', 'Customer Name', 'Customer e-mail', 'Country']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1155c1e8",
+   "metadata": {},
+   "source": [
+    "### 3.5. Segmentação das bases **train** e **test**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "5e7e0c79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separando as variáveis preditivas e a variável preditora (alvo)\n",
+    "\n",
+    "features = [col for col in df.columns if col not in [target] + vars_to_remove]\n",
+    "target = 'Car Purchase Amount'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a1064f9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separação das features e o target\n",
+    "X = df[features]\n",
+    "y = df[target]\n",
+    "\n",
+    "# Separação dos dados de treino e teste\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ace630f",
+   "metadata": {},
+   "source": [
+    "### 3.6. Transformação das features das bases **train** e **test**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "beb0566e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separando as variáveis numéricas e categóricas\n",
+    "\n",
+    "numerical_features = X.select_dtypes(exclude=[object, 'category']).columns\n",
+    "categorical_features = X.select_dtypes(include=[object, 'category']).columns"
    ]
   }
  ],
