feat: atualização do item 3.3 Análise de variáveis não numéricas e inclusão do item 3.6 Transformação das features das bases train e test.

--- a/002_modelagem_preditiva.ipynb
+++ b/002_modelagem_preditiva.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 201,
    "id": "ac890d7d",
    "metadata": {},
    "outputs": [],
@@ -66,12 +66,18 @@
     "import gc\n",
     "import time\n",
     "\n",
-    "from sklearn.model_selection import train_test_split"
+    "from category_encoders import TargetEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder, OneHotEncoder\n",
+    "from sklearn.feature_selection import VarianceThreshold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 202,
    "id": "fe23f833",
    "metadata": {},
    "outputs": [],
@@ -101,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 203,
    "id": "603fe2f4",
    "metadata": {},
    "outputs": [
@@ -110,7 +116,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Quantidade de objetos removidos da memória: 7\n"
+      "Quantidade de objetos removidos da memória: 73\n"
      ]
     }
    ],
@@ -122,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 204,
    "id": "90283013",
    "metadata": {},
    "outputs": [
@@ -349,7 +355,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 205,
    "id": "04a72734",
    "metadata": {},
    "outputs": [],
@@ -408,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 206,
    "id": "0d14e730",
    "metadata": {},
    "outputs": [
@@ -761,7 +767,7 @@
        "30              3  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 207,
    "id": "546046cf",
    "metadata": {},
    "outputs": [
@@ -809,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 208,
    "id": "c8c97fa1",
    "metadata": {},
    "outputs": [
@@ -830,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 209,
    "id": "6b8094ef",
    "metadata": {},
    "outputs": [
@@ -936,13 +942,136 @@
        "4       net  55 to 64                  Moderate  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df[cols_text].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "id": "7b911d33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Gender', 'high_income_flag', 'high_debt_flag', 'high_net_worth_flag', 'high_ppi_flag']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Detectar variáveis binárias (0 ou 1)\n",
+    "binary_cols = [\n",
+    "    col for col in df.columns\n",
+    "    if set(df[col].dropna().unique()) <= {0, 1}\n",
+    "]\n",
+    "print(binary_cols)\n",
+    "\n",
+    "# Transformando variáveis binárias (0 ou 1) em categóricas\n",
+    "df[binary_cols] = df[binary_cols].astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "0e1fe9ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>high_income_flag</th>\n",
+       "      <th>high_debt_flag</th>\n",
+       "      <th>high_net_worth_flag</th>\n",
+       "      <th>high_ppi_flag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Gender high_income_flag high_debt_flag high_net_worth_flag high_ppi_flag\n",
+       "0      0                0              0                   0             0\n",
+       "1      0                0              0                   1             1\n",
+       "2      1                0              0                   1             1\n",
+       "3      1                1              0                   1             0\n",
+       "4      1                0              0                   1             0"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[binary_cols].head()"
    ]
   },
   {
@@ -955,14 +1084,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 212,
    "id": "fc91f5dc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Separando as variáveis não aplicáveis à modelagem\n",
     "\n",
-    "vars_to_remove = ['Age', 'Customer Name', 'Customer e-mail', 'Country']"
+    "vars_to_remove = ['Customer Name', 'Customer e-mail', 'Country']\n",
+    "if 'Age' in df.columns and 'age_range' in df.columns:\n",
+    "    vars_to_remove.append('Age')\n"
    ]
   },
   {
@@ -975,20 +1106,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 213,
    "id": "5e7e0c79",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Separando as variáveis preditivas e a variável preditora (alvo)\n",
     "\n",
-    "features = [col for col in df.columns if col not in [target] + vars_to_remove]\n",
-    "target = 'Car Purchase Amount'"
+    "target = 'Car Purchase Amount'\n",
+    "features = [col for col in df.columns if col not in [target] + vars_to_remove]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 214,
    "id": "a1064f9e",
    "metadata": {},
    "outputs": [],
@@ -1013,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 215,
    "id": "beb0566e",
    "metadata": {},
    "outputs": [],
@@ -1022,6 +1153,100 @@
     "\n",
     "numerical_features = X.select_dtypes(exclude=[object, 'category']).columns\n",
     "categorical_features = X.select_dtypes(include=[object, 'category']).columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f81bafa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Criando o pipeline para as variáveis numéricas\n",
+    "num_pipeline = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='constant', fill_value=0)),\n",
+    "    ('variance', VarianceThreshold(threshold=0.0)),\n",
+    "    ('scaler', StandardScaler())\n",
+    "])\n",
+    "\n",
+    "# Criando o pipeline para as variáveis categóricas\n",
+    "cat_pipeline = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='constant', fill_value='missing')),\n",
+    "    ('encoder', OneHotEncoder(handle_unknown='ignore', sparse_output=False))\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "e398c1be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Criando o pipeline de pré-processamento que aplica transformações\n",
+    "\n",
+    "preprocessor = ColumnTransformer([\n",
+    "    ('cat', cat_pipeline, categorical_features),\n",
+    "    ('num', num_pipeline, numerical_features)\n",
+    "])\n",
+    "preprocessor = Pipeline(steps=[('preprocessor', preprocessor)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "81351057",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape: X_train: (400, 26), y_train: (400,)\n",
+      "Shape: X_test:  (100, 26),  y_test: (100,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verificando os shapes antes da transformação\n",
+    "\n",
+    "print(f'Shape: X_train: {X_train.shape}, y_train: {y_train.shape}')\n",
+    "print(f'Shape: X_test:  {X_test.shape},  y_test: {y_test.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "id": "52f33b20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aplicando o pré-processamento nos conjuntos de treino e teste\n",
+    "\n",
+    "X_train_processed = preprocessor.fit_transform(X_train, y_train)\n",
+    "X_test_processed = preprocessor.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "id": "7b5969c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape de X_train após transformação: (400, 43)\n",
+      "Shape de X_test após transformação:  (100, 43)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verificando os shapes após transformação\n",
+    "\n",
+    "print(f'Shape de X_train após transformação: {X_train_processed.shape}')\n",
+    "print(f'Shape de X_test após transformação:  {X_test_processed.shape}')"
    ]
   }
  ],
