--- a/002_modelagem_preditiva.ipynb
+++ b/002_modelagem_preditiva.ipynb
@@ -1248,6 +1248,14 @@
     "print(f'Shape de X_train após transformação: {X_train_processed.shape}')\n",
     "print(f'Shape de X_test após transformação:  {X_test_processed.shape}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ae021a9",
+   "metadata": {},
+   "source": [
+    "## 4. Modelagem preditiva"
+   ]
   }
  ],
  "metadata": {
@@ -1266,7 +1274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
