doc: ajuste no sumário.

--- a/002_modelagem_preditiva.ipynb
+++ b/002_modelagem_preditiva.ipynb
@@ -14,25 +14,16 @@
     "\n",
     "1. **Importação de bibliotecas**\n",
     "2. **Carregamento da base**\n",
-    "3. **Análise dos dataframes**\n",
+    "    - 2.1. Carregamento dos dataframes\n",
+    "    - 2.2. Extração de amostra dos dataframes\n",
+    "3. **Preparação dos dados**\n",
+    "    - 3.1. Exibição dos metadados\n",
+    "    - 3.2. Análise de cardinalidade\n",
+    "    - 3.3. Análise de variáveis não numéricas\n",
+    "    - 3.4. Selecionando variáveis não aplicáveis à modelagem\n",
+    "    - 3.5. Segmentação das bases **train** e **test**\n",
+    "    - 3.6. Transformação das features das bases **train** e **test**\n",
     "4. **Modelagem preditiva**\n",
-    "    - 4.1. Preparação dos dados\n",
-    "    - 4.2. Treinamento dos modelos com todo o histórico de dados\n",
-    "5. **Tunagem dos hiperparâmetros do modelo com Optuna**\n",
-    "6. **Salvando e testando o desempenho do modelo**\n",
-    "    - 6.1. Salvando o modelo (.pkl)\n",
-    "    - 6.2. Comparativo de resultados\n",
-    "7. **Testando o algoritmo XGBoost**\n",
-    "    - 7.1. Tunagem do modelo com Optuna\n",
-    "    - 7.2. Salvando e testando o desempenho do modelo\n",
-    "    - 7.3. Comparativo de resultados\n",
-    "8. **Testando o algoritmo CatBoost**\n",
-    "    - 8.1. Tunagem do modelo com Optuna\n",
-    "    - 8.2. Salvando e testando o desempenho do modelo\n",
-    "    - 8.3. Comparativo de resultados\n",
-    "9. **Teste de aplicação do Voting Ensemble**\n",
-    "10. **Análise da distribuição dos erros**\n",
-    "11. **Comparação: valores reais x valores preditos**\n",
     "\n",
     "<br>\n",
     "\n",
@@ -1256,6 +1247,14 @@
    "source": [
     "## 4. Modelagem preditiva"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba8d96f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
