feat: Criação da função para salvar o pkl dos modelos.

--- a/002_modelagem_preditiva.ipynb
+++ b/002_modelagem_preditiva.ipynb
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "id": "13dad1bb",
    "metadata": {},
    "outputs": [],
@@ -1342,7 +1342,7 @@
     "        Número de divisões (folds) para a validação cruzada (K-Fold).\n",
     "\n",
     "    :return: list\n",
-    "        Lista contendo os resultados de avaliação de cada modelo, RMSE e MAE para treino \n",
+    "        Lista contendo os resultados de avaliação de cada modelo, métricas para treino \n",
     "        e teste, além do tempo de execução.\n",
     "    '''\n",
     "    results = []\n",
@@ -4835,7 +4835,102 @@
    "id": "426e2089",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def train_and_save_model(best_model, file_name, model_name, X_train, y_train, X_test, y_test, preprocessor, cv_splits=5):\n",
+    "    '''\n",
+    "    Treina um modelo com os melhores hiperparâmetros, salva o pipeline treinado \n",
+    "    em um arquivo e avalia o desempenho no conjunto de teste.\n",
+    "\n",
+    "    :param best_model: object\n",
+    "        O modelo otimizado com os melhores hiperparâmetros a ser treinado.\n",
+    "    :param file_name: str\n",
+    "        Nome do arquivo para salvar o pipeline treinado (formato .pkl).\n",
+    "    :param model_name: str\n",
+    "        Nome do modelo para identificação nos resultados.\n",
+    "    :param X_train: array-like ou DataFrame\n",
+    "        Conjunto de características para treinamento.\n",
+    "    :param y_train: array-like ou Series\n",
+    "        Variável alvo correspondente ao conjunto de treinamento.\n",
+    "    :param X_test: array-like ou DataFrame\n",
+    "        Conjunto de características para teste.\n",
+    "    :param y_test: array-like ou Series\n",
+    "        Variável alvo correspondente ao conjunto de teste.\n",
+    "    :param preprocessor: ColumnTransformer\n",
+    "        Objeto de pré-processamento que será aplicado aos dados antes do treinamento do modelo.\n",
+    "    :param cv_splits: int, default=5\n",
+    "        Número de divisões (folds) para a validação cruzada (K-Fold).\n",
+    "\n",
+    "    :return: list\n",
+    "        Lista contendo o nome do modelo, métricas calculadas no conjunto \n",
+    "        de teste, para avaliação do desempenho.\n",
+    "    '''\n",
+    "    results = []  \n",
+    "    \n",
+    "    # Recriando o pipeline com os melhores hiperpârametros\n",
+    "    pipeline_best_model = Pipeline(steps=[('preprocessor', preprocessor),\n",
+    "                                          ('model', best_model)])\n",
+    "    \n",
+    "    # Inicializa o esquema de validação cruzada\n",
+    "    cv = KFold(n_splits=cv_splits, shuffle=True, random_state=42)\n",
+    "    \n",
+    "    # Define métricas de avaliação (valores negativos são convertidos depois)\n",
+    "    scoring = {\n",
+    "        'MAE': 'neg_mean_absolute_error',\n",
+    "        'RMSE': 'neg_root_mean_squared_error',\n",
+    "        'R2': 'r2'\n",
+    "    }    \n",
+    "    \n",
+    "    # Registra o tempo de início\n",
+    "    start_time = time.time()  \n",
+    "    \n",
+    "    # Ajusta o modelo final em todos os dados de treino\n",
+    "    pipeline_best_model.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Calcula tempo total de execução\n",
+    "    elapsed = time.time() - start_time       \n",
+    "    \n",
+    "    try:\n",
+    "        # Salvando o pipeline em um arquivo .pkl\n",
+    "        joblib.dump(pipeline_best_model, f'modelos/{file_name}.pkl')\n",
+    "        print(f'Arquivo {file_name}.pkl gerado com sucesso!')\n",
+    "    except Exception as e:\n",
+    "        print(f'Erro ao salvar o pipeline: {e}')    \n",
+    "    \n",
+    "    # Executa validação cruzada no pipeline\n",
+    "    cv_results = cross_validate(\n",
+    "        pipeline_best_model, X_train, y_train,\n",
+    "        cv=cv, scoring=scoring, n_jobs=-1, return_train_score=False\n",
+    "    )\n",
+    "    \n",
+    "    # Calcula médias das métricas (convertendo para valores positivos)\n",
+    "    mean_cv_mae = -np.mean(cv_results['test_MAE'])\n",
+    "    mean_cv_rmse = -np.mean(cv_results['test_RMSE'])\n",
+    "    mean_cv_r2 = np.mean(cv_results['test_R2'])\n",
+    "    \n",
+    "    # Gera previsões no conjunto de teste\n",
+    "    preds = pipeline_best_model.predict(X_test)\n",
+    "    \n",
+    "    # Métricas no teste\n",
+    "    test_rmse = np.sqrt(mean_squared_error(y_test, preds))\n",
+    "    test_mae = mean_absolute_error(y_test, preds)\n",
+    "    test_r2 = r2_score(y_test, preds)\n",
+    "    test_mape = mean_absolute_percentage_error(y_test, preds)\n",
+    "\n",
+    "    # Guarda resultados\n",
+    "    results.append({\n",
+    "        'Model': model_name,\n",
+    "        'CV_RMSE': mean_cv_rmse,\n",
+    "        'Test_RMSE': test_rmse,\n",
+    "        'CV_MAE': mean_cv_mae,\n",
+    "        'Test_MAE': test_mae,\n",
+    "        'CV_R2': mean_cv_r2,            \n",
+    "        'Test_R2': test_r2,\n",
+    "        'Test_MAPE': test_mape,\n",
+    "        'Time (s)': round(elapsed, 4)\n",
+    "    })\n",
+    "    \n",
+    "    return results   \n"
+   ]
   },
   {
    "cell_type": "code",
